manifests/prod/jellyfin/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
  namespace: app-jellyfin
spec:
  selector:
    app: jellyfin
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8096
  type: ClusterIP
